--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -7,13 +7,21 @@
     "GROUPS_TITLE": "Select a group in which you are admin, then click on it to list albums",
     "SELECT_ALBUM": "Select an album, then click on it to list photos",
     "LINK_TO_FB": "Link to Facebook",
-    "ALBUMS_OF_GROUP": "Albums of group {{group}}:",
+    "ALBUMS_OF_GROUP": "Albums of {{group}}:",
     "PHOTOS_OF_ALBUM": "Photos of album {{album}}:",
     "NUMBER": "Nr.",
     "LIKES": "Likes",
     "PHOTO": "Photo",
     "AUTHOR" : "Author",
-    "COMMENTS": "Comments"
-
-    
+    "COMMENTS": "Comments",
+    "LOGIN": "Log in to Facebook",
+    "WELCOME_MESSAGE": "Manage your Facebook albums with Album Manager app",
+    "ABOUT": "About",
+    "CONTACT":"Contact",
+    "ABOUT_DESC":"Manage your Facebook albums with Album Manager app",
+    "CONTACT_DESC":"Ferenczy Csilla",
+    "LIST_ALBUMS":"List albums",
+    "NOT_FOUND": "Page not found!",
+    "PAGES_TITLE": "Select a page you manage, then click on it to list albums" ,
+    "LIST_PAGES":"List pages"
 }
